fix addons css spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -504,6 +504,7 @@ span.checked {
 }
 
 .order--extra-items > p {
+  margin-top: 25px;
   clear: both;
 }
 
